--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,153 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.navbar {
+  padding: auto;
+  margin: auto;
+  height: 20%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.nav-link{
+  padding: auto;
+}
+.navbar-text-block {
+  display: inline-block; /* or 'block' if you want it to take the full width */
+  line-height: 1; /* Adjust line height to control space between lines */
+  margin-left: 9px; /* Space from the logo */
+}
+
+.navbar-text-block span {
+  display: block; /* Makes each span a block, forcing a new line */
+  color: white; /* Assuming you want white text */
+  /* Add other styling as needed */
+  font-size: 14px;
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-weight: 100%;
+}
+.brand-logo{
+  margin: 0;
+}
+
+.rating-container {
+  position: relative;
+  display: inline-block;
+  margin-left: 10px;
+  
+}
+
+.rating-image {
+  width: 50px; /* Set the width as required */
+  height: auto; /* Maintain aspect ratio */
+ 
+}
+
+.rating-text {
+  position: absolute;
+  top: 50%; /* Center vertically */
+  left: 50%; /* Center horizontally */
+  transform: translate(-50%, -50%); /* Adjust for precise centering */
+  color: #000; /* Set text color */
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-size: 20px; /* Set text size */
+   /* Optional: makes the text bold */
+}
+
+.text1 span {
+  
+  color: #fff;
+  display: block; /* Makes each span a block, forcing a new line */
+  font-size: 14px;
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-weight: 400;
+  margin-left: 6px;
+  margin-bottom: 7px;
+}
+.stars {
+  color: #FFD700; /* Star color, typically gold/yellow */
+  margin-bottom: 2px; /* Space between stars and text */
+  margin-left: 6px;
+}
+.star {
+  font-size: 10px;
+  margin-left: 5px;
+}
+.navbar-collapse .nav-link {
+  color: #fff;
+  margin-left: 6px;
+}
+.custom-but{
+  border-color: #fff;
+  color: #fff;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 400;
+  margin-left: 10px;
+  width: 143px;
+  height: 53px;
+  font-family: 'Open Sans', Arial, sans-serif;
+}
+
+.image-container {
+  width: 100%; /* Full width of the container */
+  padding-top: 56.25%; /* Aspect ratio: 16:9 (9/16 = 0.5625) */
+  position: relative; /* Allows absolute positioning of children */
+
+}
+
+/* Styles for the image to cover the padded area */
+.carousel-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%; /* Full width of the container */
+  height: 80%; /* Full height of the padded area */
+  object-fit: cover; /* Cover the area without stretching */
+}
+
+.loan-calculator {
+  background: #333; /* Dark background */
+  padding: 20px;
+  border-radius: 8px;
   color: white;
+  width: 50%;
+margin-bottom: 400px;
+margin-left: 300px;
+
+ 
+
+
+ 
+ 
+  
 }
 
-.App-link {
-  color: #61dafb;
+.loan-calculator h2 {
+  color: #fff;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loan-calculator label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.loan-calculator input[type='range'] {
+  width: 100%;
+}
+
+.loan-calculator input[type='text'],
+.loan-calculator select,
+.loan-calculator input[type='tel'] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 4px;
+  border: none;
+}
+
+.loan-calculator button {
+
+  color: rgb(244, 175, 21);
+  border: 1px solid rgb(244, 175, 21);
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 4px;
+  background-color: transparent;
 }
